[gd_scene load_steps=4 format=3 uid="uid://bauu67wgvxe8w"]

[ext_resource type="Script" path="res://scripts/asteroid_spawner_inverted.gd" id="1_flixf"]
[ext_resource type="PackedScene" uid="uid://dwqtgj77ikuay" path="res://enemy/asteroid/asteroid_inverted.tscn" id="2_re2d6"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_73xb2"]
b = Vector2(1922, 2)

[node name="AsteroidSpawnerInverted" type="Node2D"]
script = ExtResource("1_flixf")
asteroid_scene = ExtResource("2_re2d6")

[node name="spawn_line" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="spawn_line"]
shape = SubResource("SegmentShape2D_73xb2")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.001

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
